--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <!--Секция Заголовка-->
@@ -129,16 +129,16 @@
       <!--Секция "Об аукционе"-->
 
       <section class="about">
-        <div class="about__logo">
+        <h4 class="about__logo">
           <img class="about__logo-image" src=./images/logo-white.svg
           alt="Логотип белый" >
-        </div>
+        </h4>
         <aside class="about__column">
           <h4 class="about__title">Об аукционе</h4>
           <p class="about__text paragraph-spacing">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть
-            <br />
+            <br>
             ни на один аукцион. Потому что кому нужен дневник девочки-подростка
             или картина, которую может нарисовать даже ребёнок? Кому нужны все
             эти странные вещи, созданные любителями?
@@ -146,7 +146,7 @@
           <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря <br />
+            Когда-то они казались просто неудачными. Но, несмотря <br>
             на критику, кажущуюся простоту или сложность, сейчас без этих лотов
             невозможно представить современную культуру. Когда в эти вещи не
             верил никто, продолжали верить их создатели. И сейчас эти лоты стали
