--- a/index.html
+++ b/index.html
@@ -129,16 +129,15 @@
       <!--Секция "Об аукционе"-->
 
       <section class="about">
-        <h4 class="about__logo">
+        <div class="about__logo">
           <img class="about__logo-image" src=./images/logo-white.svg
           alt="Логотип белый" >
-        </h4>
+        </div>
         <aside class="about__column">
-          <h4 class="about__title">Об аукционе</h4>
+          <h2 class="about__title">Об аукционе</h2>
           <p class="about__text paragraph-spacing">
             Здесь вы не встретите очередное пафосное собрание невероятно
-            дорогого антиквариата. Наши лоты вообще не должны были попасть
-            <br>
+            дорогого антиквариата. Наши лоты вообще не должны были попасть 
             ни на один аукцион. Потому что кому нужен дневник девочки-подростка
             или картина, которую может нарисовать даже ребёнок? Кому нужны все
             эти странные вещи, созданные любителями?
@@ -146,7 +145,7 @@
           <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря <br>
+            Когда-то они казались просто неудачными. Но, несмотря 
             на критику, кажущуюся простоту или сложность, сейчас без этих лотов
             невозможно представить современную культуру. Когда в эти вещи не
             верил никто, продолжали верить их создатели. И сейчас эти лоты стали
